--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>Hello GitHub Pages World!</h1>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="icon" href="data:;base64,=" />
+		<link rel="stylesheet" href="style.css" />
+		<title>Koshonson@Github</title>
+	</head>
+	<body>
+		<ul>
+			<li><a href="https://github.com/koshonson">github</a></li>
+			<li><a href="https://codepen.io/mika-koshonson">codepen</a></li>
+			<li>
+				<a href="https://www.freecodecamp.org/mika-koshonson"
+					>freecodecamp</a
+				>
+			</li>
+			<li>
+				<a href="https://www.linkedin.com/in/michael-ko%C5%A1atka-057b54112/"
+					>linkedin</a
+				>
+			</li>
+		</ul>
+		<script src="script.js" type="text/javascript"></script>
+	</body>
+</html>
